[project]
name = "diffy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.8.1",
    "diffusers>=0.34.0",
    "einops>=0.8.1",
    "ffmpeg-python>=0.2.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "jaxtyping>=0.3.2",
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "torch>=2.7.1",
    "torchdiffeq>=0.2.5",
    "torchmetrics[image]>=1.7.3",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
]
